[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.10"
prost = "0.12"
tower = "0.4"
hyper = "0.14"
clap = { version = "4.1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"